--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "firebase": "^10.12.2",
     "i": "^0.3.7",
     "next": "14.2.4",
     "react": "^18",
